--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ./cmd/database/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
   server:
     network_mode: bridge
+    depends_on:
+      - db
     build:
       dockerfile: build/package/docker/server/Dockerfile
       context: .
