--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - ./cmd/database/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
   server:
     network_mode: bridge
+    restart: always
     depends_on:
       - db
     build:
